--- a/src/app/menu-component/menu-component.component.html
+++ b/src/app/menu-component/menu-component.component.html
@@ -2,13 +2,15 @@
   <div class="card-body">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a routerLink="/search" routerLinkActive="btn btn-primary text-white" class="nav-link">
+        <a routerLink="/search" routerLinkActive="btn btn-primary text-white"
+          class="nav-link">
           <i class="fas fa-search mr-3"></i>
           Pesquisar
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="/favorites" routerLinkActive="btn btn-primary text-white" class="nav-link">
+        <a routerLink="/favorites" routerLinkActive="btn btn-primary text-white"
+          class="nav-link">
           <i class="fas fa-heart mr-3"></i>
           Favoritos
         </a>
